# pupil-core-pipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/core/: __init__.py  accuracy_precision.py  pipeline.py  pupil_detection.py
