[metadata]
name = core
version = attr: core.__version__
description = Implementation of the Pupil Core gaze estimation pipeline
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    python-dotenv

# [options.entry_points]
# console_scripts =
#     executable-name = package.module:function

[options.packages.find]
where=src