[metadata]
name = core
description = Implementation of the Pupil Core gaze estimation pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    python-dotenv
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    pre-commit
