[metadata]
name = core
description = Implementation of the Pupil Core gaze estimation pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
install_requires =
    av
    click
    msgpack>=1.0.0
    ndsi
    numexpr
    opencv-python
    packaging>=20.0
    pupil-apriltags==1.0.*
    pupil-detectors>=2.0.2rc2
    pupil-labs-uvc
    pye3d==0.3.*
    python-dotenv
    pyzmq
    rich
    scikit-learn
    scipy
    typing-extensions>=4.1.0
    zeromq-pyre>=0.3.4
    cysignals;platform_system != "Windows"
    win-inet-pton;platform_system == "Windows"
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pupil_core_posthoc_pipeline = core.pipeline:main
    pupil_core_accuracy = core.accuracy_precision:main

[options.extras_require]
all =
    core[apps]
    core[dev]
apps =
    glfw>=2.0.0
    psutil
    pyglui>=1.31.0
    pyopengl
    sounddevice
dev =
    black
    pre-commit
